--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,10 +17,12 @@
     "express": "^4.18.2",
     "express-session": "^1.18.1",
     "ioredis": "^5.6.1",
+    "kafkajs": "^2.2.4",
     "mongoose": "^8.15.1",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "winston": "^3.17.0"
   },
   "devDependencies": {
