--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,8 +17,10 @@
     "express": "^4.18.2",
     "express-session": "^1.18.1",
     "ioredis": "^5.6.1",
+    "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
     "mongoose": "^8.15.1",
+    "nodemailer": "^6.9.8",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "socket.io": "^4.8.1",
