--- a/Backend/package.json
+++ b/Backend/package.json
@@ -23,6 +23,7 @@
     "nodemailer": "^6.9.8",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
+    "resend": "^6.2.2",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "winston": "^3.17.0"
