--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "body-parser": "^2.2.0",
+    "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "expo-image-manipulator": "^14.0.7",
     "express": "^4.18.2",
     "express-session": "^1.18.1",
     "ioredis": "^5.6.1",
