--- a/Backend/package.json
+++ b/Backend/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
     "mongoose": "^8.15.1",
+    "multer": "^2.0.2",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "resend": "^6.2.2",
