--- a/.github/workflows/dev_maya.yml
+++ b/.github/workflows/dev_maya.yml
@@ -24,6 +24,7 @@ jobs:
           node-version: '20.x'
 
       - name: npm install, build, and test
+        working-directory: ./Backend
         run: |
           npm install
           npm run build --if-present
@@ -33,7 +34,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: ./Backend
 
   deploy:
     runs-on: ubuntu-latest
@@ -61,5 +62,5 @@ jobs:
         with:
           app-name: 'Maya'
           slot-name: 'Production'
-          package: .
+          package: ./Backend
           
