--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,11 +18,13 @@
     "expo-image-manipulator": "^14.0.7",
     "express": "^4.18.2",
     "express-session": "^1.18.1",
+    "googleapis": "^164.1.0",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
     "mongoose": "^8.15.1",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.10",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "resend": "^6.2.2",
