--- a/.github/workflows/dev_maya.yml
+++ b/.github/workflows/dev_maya.yml
@@ -30,11 +30,22 @@ jobs:
           npm run build --if-present
           npm run test --if-present
       
+      - name: Create deployment package (exclude node_modules)
+        working-directory: .
+        shell: pwsh
+        run: |
+          # Use robocopy to copy files excluding node_modules and logs
+          New-Item -ItemType Directory -Path "deploy-package" -Force | Out-Null
+          robocopy "Backend" "deploy-package" /E /XD node_modules logs .git /XF *.log /NFL /NDL /NJH /NJS
+          # robocopy exits with code 1 if files were copied (which is success), so exit 0
+          exit 0
+      
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: ./Backend
+          path: ./deploy-package
+          retention-days: 1
 
   deploy:
     runs-on: ubuntu-latest
@@ -49,22 +60,6 @@ jobs:
         with:
           name: node-app
           path: deploy
-      
-      - name: List files for debugging
-        run: |
-          echo "Current directory:"
-          pwd
-          echo "Contents of deploy directory:"
-          ls -la deploy || ls -la
-          if [ -d "deploy/Backend" ]; then
-            echo "Backend directory exists in deploy/"
-            ls -la deploy/Backend
-          elif [ -d "Backend" ]; then
-            echo "Backend directory exists in root"
-          elif [ -f "deploy/package.json" ]; then
-            echo "package.json found in deploy/ - contents are at root of deploy"
-            ls -la deploy
-          fi
       
       - name: Login to Azure
         uses: azure/login@v2
