--- a/.github/workflows/dev_maya.yml
+++ b/.github/workflows/dev_maya.yml
@@ -46,14 +46,16 @@ jobs:
       - name: Prepare deployment package
         working-directory: ./Backend
         run: |
-          # Remove only logs and git, keep node_modules for deployment
+          # Remove node_modules, logs, and unnecessary files to reduce package size
+          # Azure will install node_modules automatically during deployment
+          rm -rf node_modules
           rm -rf logs
           rm -rf .git
           find . -name "*.log" -type f -delete
           find . -name ".DS_Store" -type f -delete
           # Remove web.config for Linux deployment
           rm -f web.config
-          echo "Prepared package (keeping node_modules)"
+          echo "Prepared package (excluded node_modules - Azure will install them)"
           echo "Package size:"
           du -sh .
       
@@ -126,23 +128,35 @@ jobs:
           echo "Resource Group: $RESOURCE_GROUP"
           az webapp show --name Maya --resource-group "$RESOURCE_GROUP" --query "{name:name, resourceGroup:resourceGroup, state:state, os:siteConfig.linuxFxVersion}" -o table
       
+      - name: Configure App Service to build during deployment
+        run: |
+          # Set app setting to install dependencies during deployment
+          az webapp config appsettings set \
+            --name Maya \
+            --resource-group "$RESOURCE_GROUP" \
+            --settings SCM_DO_BUILD_DURING_DEPLOYMENT=true \
+            --output none
+          echo "✅ Configured app to build during deployment"
+      
       - name: Deploy using Azure CLI (direct deployment)
         run: |
-          zip -r deploy.zip . -q
+          # Exclude node_modules from zip (Azure will install them)
+          zip -r deploy.zip . -q -x "node_modules/*" "*.git*" "*.log" "*.DS_Store" "web.config"
           echo "Zip file created, size:"
           ls -lh deploy.zip
           
-          echo "Deploying via Azure CLI..."
-          az webapp deployment source config-zip \
+          echo "Deploying via Azure CLI (Azure will run npm install automatically)..."
+          az webapp deploy \
             --name Maya \
             --resource-group "$RESOURCE_GROUP" \
-            --src deploy.zip \
-            --timeout 600 \
-            --verbose || {
+            --src-path deploy.zip \
+            --type zip \
+            --async false \
+            --timeout 600 || {
               echo "Deployment failed. Getting more details..."
               az webapp show --name Maya --resource-group "$RESOURCE_GROUP" --query "{state:state, defaultHostName:defaultHostName}" -o table || true
               exit 1
             }
           
-          echo "Deployment initiated successfully"
+          echo "✅ Deployment completed successfully"
           
