--- a/.github/workflows/dev_maya.yml
+++ b/.github/workflows/dev_maya.yml
@@ -138,25 +138,27 @@ jobs:
             --output none
           echo "✅ Configured app to build during deployment"
       
-      - name: Deploy using Azure CLI (direct deployment)
+      - name: Check App Service status
+        run: |
+          echo "Checking App Service and SCM site status..."
+          az webapp show --name Maya --resource-group "$RESOURCE_GROUP" --query "{state:state, enabled:enabled, scmSiteAlsoStopped:siteConfig.scmSiteAlsoStopped}" -o table
+          # Ensure app is running
+          az webapp start --name Maya --resource-group "$RESOURCE_GROUP" --output none || true
+          echo "Waiting 5 seconds for service to be ready..."
+          sleep 5
+      
+      - name: Create deployment zip
         run: |
           # Exclude node_modules from zip (Azure will install them)
           zip -r deploy.zip . -q -x "node_modules/*" "*.git*" "*.log" "*.DS_Store" "web.config"
           echo "Zip file created, size:"
           ls -lh deploy.zip
-          
-          echo "Deploying via Azure CLI (Azure will run npm install automatically)..."
-          az webapp deploy \
-            --name Maya \
-            --resource-group "$RESOURCE_GROUP" \
-            --src-path deploy.zip \
-            --type zip \
-            --async false \
-            --timeout 600 || {
-              echo "Deployment failed. Getting more details..."
-              az webapp show --name Maya --resource-group "$RESOURCE_GROUP" --query "{state:state, defaultHostName:defaultHostName}" -o table || true
-              exit 1
-            }
-          
-          echo "✅ Deployment completed successfully"
+      
+      - name: Deploy using GitHub Action (recommended)
+        uses: azure/webapps-deploy@v3
+        id: deploy-to-webapp
+        with:
+          app-name: 'Maya'
+          slot-name: 'Production'
+          package: deploy.zip
           
