--- a/.github/workflows/dev_maya.yml
+++ b/.github/workflows/dev_maya.yml
@@ -83,13 +83,11 @@ jobs:
         run: |
           echo "Current directory contents after download:"
           ls -la
-          # The artifact is already the contents of the Backend folder, no need to move
-          if [ -f "package.json" ]; then
-            echo "✅ package.json found at root of artifact"
-          else
-            echo "❌ package.json not found at root of artifact!"
-            find . -name "package.json" -type f
-            exit 1
+          if [ -f "package.json" ]; then 
+            echo "✅ package.json found"; 
+          else 
+            echo "❌ package.json not found!"; 
+            exit 1; 
           fi
           echo "Package size:"
           du -sh .
@@ -100,40 +98,6 @@ jobs:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_97B8DA4EDB1F4771AECAA074696E3E74 }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_A991E240EF384A70891F3517360891DE }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_2276E1689CF5423891BDA354FAC31928 }}
-
-      - name: Get App Service details
-        run: |
-          # Add this step to ensure the RESOURCE_GROUP variable is set correctly for subsequent steps
-          RESOURCE_GROUP=$(az webapp list --query "[?name=='Maya'].resourceGroup" -o tsv | head -1)
-          if [ -z "$RESOURCE_GROUP" ]; then
-            RESOURCE_GROUP=$(az resource list --name Maya --resource-type "Microsoft.Web/sites" --query "[0].resourceGroup" -o tsv)
-          fi
-          if [ -z "$RESOURCE_GROUP" ]; then
-            echo "Error: Could not determine resource group for app 'Maya'"
-            exit 1
-          fi
-          echo "RESOURCE_GROUP=$RESOURCE_GROUP" >> $GITHUB_ENV
-          echo "Resource Group: $RESOURCE_GROUP"
-          az webapp show --name Maya --resource-group "$RESOURCE_GROUP" --query "{name:name, resourceGroup:resourceGroup, state:state, os:siteConfig.linuxFxVersion}" -o table
-      
-      - name: Configure App Service to build during deployment
-        run: |
-          # Set app setting to install dependencies during deployment using Oryx
-          az webapp config appsettings set \
-            --name Maya \
-            --resource-group "$RESOURCE_GROUP" \
-            --settings SCM_DO_BUILD_DURING_DEPLOYMENT=true \
-            --output none
-          echo "✅ Configured app to build during deployment"
-      
-      - name: Check App Service status
-        run: |
-          echo "Checking App Service and SCM site status..."
-          az webapp show --name Maya --resource-group "$RESOURCE_GROUP" --query "{state:state, enabled:enabled, scmSiteAlsoStopped:siteConfig.scmSiteAlsoStopped}" -o table
-          # Ensure app is running
-          az webapp start --name Maya --resource-group "$RESOURCE_GROUP" --output none || true
-          echo "Waiting 5 seconds for service to be ready..."
-          sleep 5
       
       - name: Deploy using GitHub Action
         uses: azure/webapps-deploy@v3
@@ -142,4 +106,7 @@ jobs:
           app-name: 'Maya'
           slot-name: 'Production'
           package: . # Point to the current directory where artifact was downloaded
+          # Explicitly set the app setting as an input to the action for clarity and reliability
+          app-settings: |
+            SCM_DO_BUILD_DURING_DEPLOYMENT=true
           
