--- a/.github/workflows/dev_maya.yml
+++ b/.github/workflows/dev_maya.yml
@@ -93,49 +93,88 @@ jobs:
           echo "📥 Current directory contents after download:"
           ls -la
           echo ""
-          echo "🔍 Searching for package.json in various locations..."
+          echo "🔍 Searching for package.json..."
           
-          # GitHub Actions may extract artifacts into different folder structures
-          # Handle all possible cases: root, node-app/, node-app/Backend/, or Backend/
+          # Find package.json anywhere in the directory tree
+          PACKAGE_JSON_PATH=$(find . -name "package.json" -type f | head -1)
           
-          if [ -f "package.json" ]; then
-            echo "✅ package.json found at root - no flattening needed";
-          elif [ -d "node-app" ] && [ -f "node-app/package.json" ]; then
-            echo "✅ package.json found in node-app/, flattening to root...";
-            shopt -s dotglob
-            mv node-app/* .
-            rmdir node-app 2>/dev/null || true
-          elif [ -d "node-app" ] && [ -d "node-app/Backend" ] && [ -f "node-app/Backend/package.json" ]; then
-            echo "✅ package.json found in node-app/Backend/, flattening to root...";
-            shopt -s dotglob
-            mv node-app/Backend/* .
-            rmdir node-app/Backend 2>/dev/null || true
-            rmdir node-app 2>/dev/null || true
-          elif [ -d "Backend" ] && [ -f "Backend/package.json" ]; then
-            echo "✅ package.json found in Backend/, flattening to root...";
-            shopt -s dotglob
-            mv Backend/* .
-            rmdir Backend 2>/dev/null || true
-          else
-            echo "❌ package.json not found in expected locations!";
-            echo "Searching recursively for package.json:"
-            find . -name "package.json" -type f
-            echo ""
-            echo "Current directory structure:"
-            find . -type f -name "package.json" -o -type d -name "src" | head -20
+          if [ -z "$PACKAGE_JSON_PATH" ]; then
+            echo "❌ ERROR: package.json not found anywhere!";
+            echo "Directory structure:"
+            find . -type d | head -20
             exit 1;
+          fi
+          
+          echo "✅ Found package.json at: $PACKAGE_JSON_PATH"
+          
+          # If package.json is already at root, no flattening needed
+          if [ "$PACKAGE_JSON_PATH" = "./package.json" ]; then
+            echo "✅ package.json already at root - no flattening needed";
+          else
+            # Get the directory containing package.json
+            PACKAGE_DIR=$(dirname "$PACKAGE_JSON_PATH")
+            echo "📦 package.json is in directory: $PACKAGE_DIR"
+            
+            # Count how many levels deep
+            DEPTH=$(echo "$PACKAGE_DIR" | tr -cd '/' | wc -c)
+            echo "📏 Depth: $DEPTH levels"
+            
+            # Flatten: move all contents from package.json directory to root
+            if [ "$PACKAGE_DIR" != "." ]; then
+              echo "🔄 Flattening structure: moving contents from $PACKAGE_DIR to root..."
+              
+              # Normalize the path (remove leading ./)
+              PACKAGE_DIR="${PACKAGE_DIR#./}"
+              
+              # Move all files and directories from package.json directory to root
+              # Use a loop to handle all items including hidden files
+              shopt -s dotglob nullglob
+              for item in "$PACKAGE_DIR"/* "$PACKAGE_DIR"/.[!.]* "$PACKAGE_DIR"/..?*; do
+                if [ -e "$item" ] || [ -L "$item" ]; then
+                  mv "$item" . 2>/dev/null || true
+                fi
+              done
+              shopt -u dotglob nullglob
+              
+              # Remove empty directories (going from deepest to shallowest)
+              # Try multiple times to handle nested empty directories
+              for i in {1..5}; do
+                find . -type d -empty -delete 2>/dev/null || true
+              done
+              
+              echo "✅ Flattening complete"
+            fi
           fi
           
           # Verify package.json is now at root
           if [ ! -f "package.json" ]; then
             echo "❌ ERROR: package.json still not at root after flattening!";
+            echo "Current directory contents:"
+            ls -la
+            echo ""
+            echo "Searching for package.json again:"
+            find . -name "package.json" -type f
             exit 1;
           fi
+          
           echo "✅ Confirmed: package.json is at root"
+          
+          # Show structure after flattening for debugging
+          echo "📂 Directory structure after flattening:"
+          find . -maxdepth 2 -type d | sort
+          echo ""
+          
           # Final cleanup - remove node_modules if accidentally included
           if [ -d "node_modules" ]; then
             echo "⚠️ node_modules found (removing to reduce package size)...";
             rm -rf node_modules
+          fi
+          
+          # Check for any leftover nested directories that might indicate incomplete flattening
+          REMAINING_NESTED=$(find . -mindepth 2 -name "package.json" -type f 2>/dev/null | wc -l)
+          if [ "$REMAINING_NESTED" -gt 0 ]; then
+            echo "⚠️ WARNING: Found $REMAINING_NESTED package.json files in nested directories!"
+            find . -name "package.json" -type f
           fi
           
           echo "📋 Verifying final structure:"
