--- a/Backend/web.config
+++ b/Backend/web.config
@@ -52,7 +52,7 @@
       node_env="%node_env%"
       loggingEnabled="true"
       logDirectory="iisnode"
-      debugHeaderEnabled="false"
+      debugHeaderEnabled="true"
       debuggerPortRange="5058-6058"
       maxNamedPipeConnectionRetry="100"
       namedPipeConnectionRetryDelay="250"
@@ -62,7 +62,10 @@
       maxRequestBufferSize="65536"
       watchedFiles="*.js;iisnode.yml"
       uncFileChangesPollingInterval="5000"
-      gracefulShutdownTimeout="60000"/>
+      gracefulShutdownTimeout="60000"
+      flushResponse="false"
+      promoteServerVars=""
+      configOverrides="iisnode.yml"/>
   </system.webServer>
 </configuration>
 
