--- a/Backend/web.config
+++ b/Backend/web.config
@@ -63,9 +63,13 @@
       watchedFiles="*.js;iisnode.yml"
       uncFileChangesPollingInterval="5000"
       gracefulShutdownTimeout="60000"
-      flushResponse="false"
+      flushResponse="true"
       promoteServerVars=""
-      configOverrides="iisnode.yml"/>
+      configOverrides="iisnode.yml"
+      devErrorsEnabled="true"/>
+    
+    <!-- HTTP Errors - redirect to Node.js app for better error handling -->
+    <httpErrors existingResponse="PassThrough" />
   </system.webServer>
 </configuration>
 
