--- a/Backend/web.config
+++ b/Backend/web.config
@@ -47,9 +47,10 @@
     </security>
     
     <!-- iisnode configuration -->
+    <!-- For Azure App Service: node.exe is found via PATH based on WEBSITE_NODE_DEFAULT_VERSION -->
+    <!-- Azure automatically installs Node.js based on WEBSITE_NODE_DEFAULT_VERSION setting -->
     <iisnode
-      nodeProcessCommandLine="%node_cmd%"
-      node_env="%node_env%"
+      nodeProcessCommandLine="node.exe"
       loggingEnabled="true"
       logDirectory="iisnode"
       debugHeaderEnabled="true"
