--- a/Backend/web.config
+++ b/Backend/web.config
@@ -49,6 +49,8 @@
     <!-- iisnode configuration -->
     <!-- For Azure App Service: node.exe is found via PATH based on WEBSITE_NODE_DEFAULT_VERSION -->
     <!-- Azure automatically installs Node.js based on WEBSITE_NODE_DEFAULT_VERSION setting -->
+    <!-- logDirectory: Relative path - iisnode will create logs in app directory or use default -->
+    <!-- If permission issues occur, logs will be in D:\home\LogFiles\iisnode automatically -->
     <iisnode
       nodeProcessCommandLine="node.exe"
       loggingEnabled="true"
