adding node 20 path to web config

--- a/Backend/web.config
+++ b/Backend/web.config
@@ -47,8 +47,10 @@
     </security>
     
     <!-- iisnode configuration -->
+    <!-- nodeProcessCommandLine: Using explicit path to Node.js 20.19.4 (latest installed) -->
+    <!-- This bypasses the PATH issue where old Node.js 0.10.40 was being used -->
     <iisnode
-      nodeProcessCommandLine="%node_cmd%"
+      nodeProcessCommandLine="C:\Program Files (x86)\nodejs\20.19.4\node.exe"
       node_env="%node_env%"
       loggingEnabled="true"
       logDirectory="iisnode"
