--- a/Backend/web.config
+++ b/Backend/web.config
@@ -1,3 +1,4 @@
+
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <system.webServer>
@@ -47,13 +48,10 @@
     </security>
     
     <!-- iisnode configuration -->
-    <!-- For Azure App Service: node.exe is found via PATH based on WEBSITE_NODE_DEFAULT_VERSION -->
-    <!-- Azure automatically installs Node.js based on WEBSITE_NODE_DEFAULT_VERSION setting -->
-    <!-- Using "node.exe" (relies on PATH) is more flexible than hardcoded path -->
-    <!-- logDirectory: Relative path - iisnode will create logs in app directory or use default -->
-    <!-- If permission issues occur, logs will be in D:\home\LogFiles\iisnode automatically -->
+    <!-- nodeProcessCommandLine: Using explicit path to Node.js 20.19.4 (latest installed) -->
+    <!-- This bypasses the PATH issue where old Node.js 0.10.40 was being used -->
     <iisnode
-      nodeProcessCommandLine="node.exe"
+      nodeProcessCommandLine="C:\Program Files (x86)\nodejs\20.19.4\node.exe"
       node_env="%node_env%"
       loggingEnabled="true"
       logDirectory="iisnode"
@@ -68,13 +66,10 @@
       watchedFiles="*.js;iisnode.yml"
       uncFileChangesPollingInterval="5000"
       gracefulShutdownTimeout="60000"
-      flushResponse="true"
+      flushResponse="false"
       promoteServerVars=""
-      configOverrides="iisnode.yml"
-      devErrorsEnabled="true"/>
-    
-    <!-- HTTP Errors - redirect to Node.js app for better error handling -->
-    <httpErrors existingResponse="PassThrough" />
+      configOverrides="iisnode.yml"/>
   </system.webServer>
 </configuration>
+
 
